--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,28 +3,26 @@ on: [push, pull_request]
 
 jobs:
   opam:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
-          - windows-latest
         ocaml:
-          - 4.11.1
+          - 4.13.1
           - 4.02.3
-        exclude:
+        include:
           - os: macos-latest
-            ocaml: 4.02.3
+            ocaml: 4.13.1
           - os: windows-latest
-            ocaml: 4.02.3
+            ocaml: 4.13.1
       fail-fast: false
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - uses: avsm/setup-ocaml@v1
+      - uses: ocaml/setup-ocaml@v2
         with:
           ocaml-version: ${{ matrix.ocaml }}
       - run: opam depext -y conf-pkg-config
@@ -32,7 +30,6 @@ jobs:
       - run: opam exec -- dune build -p luv
 
   esy:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os:
@@ -40,6 +37,7 @@ jobs:
           - macos-latest
           - windows-latest
       fail-fast: false
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v2
