luv_unix: require luv that installs uv.h

--- a/luv_unix.opam
+++ b/luv_unix.opam
@@ -15,7 +15,7 @@ dev-repo: "git+https://github.com/aantron/luv.git"
 depends: [
   "base-unix"
   "dune" {>= "2.0.0"}
-  "luv"
+  "luv" {>= "0.5.7"}  # uv.h.
   "ocaml" {>= "4.02.0"}
   "result"
 ]
