luv_unix: tighter dependency constraints
Incorporates:

- https://github.com/ocaml/opam-repository/pull/20502/commits/bb21c556a58c825db1dd38c07f39c076834397dc
- https://github.com/ocaml/opam-repository/pull/20502/commits/7ba172566dc804d6743933c87a6ab0fcbeeac825

--- a/luv_unix.opam
+++ b/luv_unix.opam
@@ -14,8 +14,9 @@ dev-repo: "git+https://github.com/aantron/luv.git"
 
 depends: [
   "base-unix"
+  "ctypes" {>= "0.14.0"}  # Ctypes.CArray.of_string.
   "dune" {>= "2.0.0"}
-  "luv" {>= "0.5.7"}  # uv.h.
+  "luv" {>= "0.5.8"}
   "ocaml" {>= "4.02.0"}
   "result"
 ]
