--- a/src/unix/dune
+++ b/src/unix/dune
@@ -1,5 +1,5 @@
 (library
  (public_name luv_unix)
  (libraries luv luv.c result unix)
- (foreign_stubs (language c) (names luv_unix))
+ (foreign_stubs (language c) (names luv_unix) (flags :standard (:include ../c/config/uv_include.sexp)))
  (flags (:standard -w -49 -open Result)))
