Hardcode vendoring libuv

--- a/src/c/dune
+++ b/src/c/dune
@@ -1,28 +1,3 @@
-(* -*- tuareg -*- *)
-
-let foreign_archives, uv_library_flag, include_dirs, i_option, install_h =
-  let use_system_libuv =
-    match Sys.getenv "LUV_USE_SYSTEM_LIBUV" with
-    | "yes" -> true
-    | _ -> false
-    | exception Not_found -> false
-  in
-
-  if use_system_libuv then
-    "",
-    "-luv",
-    "",
-    "",
-    false
-  else
-    "(foreign_archives uv)",
-    "",
-    "(include_dirs vendor/libuv/include)",
-    "-I vendor/libuv/include",
-    true
-
-let () = Jbuild_plugin.V1.send @@ {|
-
 ; The final FFI module, containing all the OCaml bits, and linked with libuv.
 (library
  (name luv_c)
@@ -33,11 +8,10 @@ let () = Jbuild_plugin.V1.send @@ {|
  (foreign_stubs
   (language c)
   (names c_generated_functions helpers)
-  |}^ include_dirs ^{|)
- |}^ foreign_archives ^{|
- (c_library_flags |}^ uv_library_flag ^{| (:include extra_libs.sexp)))
-
-|}^ (if not install_h then "" else {|
+  (include_dirs vendor/libuv/include)
+  )
+ (foreign_archives uv)
+ (c_library_flags (:include extra_libs.sexp)))
 
 (install
  (section lib)
@@ -59,10 +33,6 @@ let () = Jbuild_plugin.V1.send @@ {|
   (vendor/libuv/include/uv/unix.h as uv/unix.h)
   (vendor/libuv/include/uv/version.h as uv/version.h)
   (vendor/libuv/include/uv/win.h as uv/win.h)))
-
-|}) ^{|
-
-
 
 ; The vendored libuv.
 (rule
@@ -126,12 +96,13 @@ let () = Jbuild_plugin.V1.send @@ {|
     %{cc} %{c} \
     -I '%{lib:ctypes:.}' \
     -I %{ocaml_where} \
-    |}^ i_option ^{| /Fe\"%{targets}\"; \
+    -I vendor/libuv/include
+    /Fe\"%{targets}\"; \
   else \
     %{cc} %{c} \
     -I '%{lib:ctypes:.}' \
     -I %{ocaml_where} \
-    |}^ i_option ^{| -o %{targets}; \
+    -I vendor/libuv/include -o %{targets}; \
   fi")))
 
 (rule
@@ -164,5 +135,3 @@ let () = Jbuild_plugin.V1.send @@ {|
 (rule
  (with-stdout-to luv_c_generated_functions.ml
   (run ./generate_ml_functions.exe luv_stub)))
-
-|}
