--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,20 +41,25 @@ jobs:
       - run: opam install -y --deps-only .
       - run: opam exec -- dune build -p luv
 
-  esy:
-    strategy:
-      matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-      fail-fast: false
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - run: npm install esy
-      - run: npx esy install
-      - run: npx esy build
+  # esy builds are broken due to an upstream bug that is not worth working
+  # around in luv, but should be fixed in esy:
+  #
+  #   https://github.com/esy/esy/issues/1440
+  #
+  # esy:
+  #   strategy:
+  #     matrix:
+  #       os:
+  #         - ubuntu-latest
+  #         - macos-latest
+  #         - windows-latest
+  #     fail-fast: false
+  #   runs-on: ${{ matrix.os }}
+  #
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: recursive
+  #     - run: npm install esy
+  #     - run: npx esy install
+  #     - run: npx esy build
