Update GitHub Actions script (#141)
- Add OCaml 4.14.
- Add OCaml 5.1.
- Update to actions/checkout@v4.
- Use opam-repository-mingw#sunset and opam-repository on Windows.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,23 +8,35 @@ jobs:
         os:
           - ubuntu-latest
         ocaml:
-          - 4.13.1
-          - 4.03.0
+          - 5.1.x
+          - 4.14.x
+          - 4.03.x
         include:
           - os: macos-latest
-            ocaml: 4.13.1
+            ocaml: 4.14.x
           - os: windows-latest
-            ocaml: 4.13.1
+            ocaml: 4.14.x
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
+
       - uses: ocaml/setup-ocaml@v2
+        if: runner.os != 'Windows'
         with:
           ocaml-compiler: ${{ matrix.ocaml }}
+
+      - uses: ocaml/setup-ocaml@v2
+        if: runner.os == 'Windows'
+        with:
+          ocaml-compiler: ${{ matrix.ocaml }}
+          opam-repositories: |
+            opam-repository-mingw: https://github.com/ocaml-opam/opam-repository-mingw.git#sunset
+            default: https://github.com/ocaml/opam-repository.git
+
       - run: opam depext -y conf-pkg-config
       - run: opam install -y --deps-only .
       - run: opam exec -- dune build -p luv
@@ -40,7 +52,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
       - run: npm install esy
