--- a/luv.opam
+++ b/luv.opam
@@ -15,6 +15,7 @@ depends: [
   "base-unix" {build}
   "ctypes" {>= "0.14.0"}
   "dune" {>= "2.7.0"}
+  "integers" {>= "0.3.0"}
   "ocaml" {>= "4.03.0"}
 
   "alcotest" {with-test & >= "0.8.1"}
