--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,14 @@ jobs:
         os:
           - ubuntu-latest
         ocaml:
-          - 5.1.x
-          - 4.14.x
+          - 5
+          - 4
           - 4.03.x
         include:
           - os: macos-latest
-            ocaml: 4.14.x
+            ocaml: 4
           - os: windows-latest
-            ocaml: 4.14.x
+            ocaml: 4
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
